BJS2-47617: Анализ активности пользователей в социальной сети